# fractals

./: .gitignore  Flame_2022-01-01-143908.flame  bumpyness.ods  cli.py  flame.py  flames.flame  heartgrid.flame  mobile-flames.flame  open.txt  pyproject.toml  references.flame  render.py  simple.flame  test_flames.py  utils.py
cli/: colorrotate.py
flames/: binary.flame  flames.flame  heartgrid.flame
fractals/: animation.py  color.py  flame.py  flameanimation.py  manual_flame.py  midi.py  palette.py  transform.py  transitions.py  utils.py  video.py  xform.py  xformanimation.py
midi/: Walz for Annie.mid  Walz for Annie.mscz
midi/.mscbackup/: .Walz for Annie.mscz~
scripts/: 000.py  004.py  019.py  023.py  026.py  027.py  032.py  035.py  036.py  038.py  039.py  042.py  045.py  046.py  048.py  057.py  057_annie.py  binary.py  m-001.py  simple.py  test.py  test_transitions.py
scripts/mobile/: m-003.py  m-005.py  m-006.py  m-007.py  m-008.py
scripts/widescreen/: 019.py  023.py  026.py  031.py  037.py  039.py  057.py
tests/: heartgrid.flame  test_animation.py  test_flames.py
